syntax = "proto3";

package films;

import "google/protobuf/timestamp.proto";

// ----------------------
// Справочники с themoviedb_id
// ----------------------

message Genre {
  int32 themoviedb_id = 1;
  string name = 2;
}

message ProductionCompany {
  int32 themoviedb_id = 1;
  string name = 2;
  string origin_country = 3;
}

message Country {
  int32 themoviedb_id = 1; // добавляем для единого идентификатора источника
  string isoCode = 2;
  string name = 3;
}

message Language {
  string isoCode = 2;
  string name = 3;
  string english_name = 4;
}

// ----------------------
// Основной фильм
// ----------------------

message Film {
  int32 themoviedb_id = 1; // уникальный id источника
  string title = 2;
  string original_title = 3;
  string overview = 4;
  google.protobuf.Timestamp release_date = 5;
  string original_language = 6;
  int32 budget = 7;
  int32 revenue = 8;
  int32 runtime = 9;
  string status = 10;
  string tagline = 11;
  string homepage = 12;
  string poster_path = 13;
  string backdrop_path = 14;
  float popularity = 15;
  float vote_average = 16;
  int32 vote_count = 17;
  bool adult = 18;
  bool video = 19;
}

// ----------------------
// FullFilmData для передачи фильма с полным контекстом справочников
// ----------------------

message FullFilmData {
  Film film = 1;
  repeated Genre genres = 2;
  repeated ProductionCompany companies = 3;
  repeated Country countries = 4;
  repeated Language languages = 5;
}

// ----------------------
// Ответ сервиса
// ----------------------

message FilmResponse {
  int32 id = 1;
  string title = 2;
  string original_title = 3;
  bool is_new = 4;
  int32 upsert_code = 5;
  string upsert_string = 6;
  google.protobuf.Timestamp createdAt = 7;
  google.protobuf.Timestamp updatedAt = 8;
}

// ----------------------
// gRPC сервис
// ----------------------

service FilmsService {
  // Upsert фильма с полным контекстом справочников
  rpc UpsertFilm(FullFilmData) returns (FilmResponse);
}
